<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/capa_doa_livro">

    <TextView
        android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:text="@string/titulo"
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <TextView
        android:text="@string/ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:text="@string/ano"
        android:id="@+id/tv_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <TextView
        android:text="@string/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:text="@string/autor"
        android:id="@+id/tv_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fb7600"/>

    <Button
        android:text="@string/solicitar"
        android:id="@+id/b_solicitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/proximo"
        android:id="@+id/b_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button

        android:text="@string/anterior"
        android:id="@+id/b_anterior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/fechar"
        android:id="@+id/b_fechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
